--- a/ansible/roles/water-gkhs-nginx-errors/templates/errors/50X.html
+++ b/ansible/roles/water-gkhs-nginx-errors/templates/errors/50X.html
@@ -7,23 +7,22 @@
 
 body {
 	margin: 0;
-	font-family: sans-serif;
+	font-family: 'Comfortaa', cursive;
 }
-	.header {
-		background-color: #000;
-		color: #FFF;
-		border-bottom: 2px solid #0e3874;
-		padding: 1em;
-		font-family: 'SteelfishRegular';
-	}
-
+.header {
+	background-color: #000;
+	color: #FFF;
+	border-bottom: 2px solid #0e3874;
+	padding: 1em;
+	font-family: 'Comfortaa', cursive;
+}
 .content {
 	padding: 1em;
 }
 
 .header h1 a {
 	font-weight: normal;
-	color: white;
+	color: #FFD300;
 	text-decoration: none;
 }
 
@@ -51,19 +50,17 @@ body {
         bottom: 10%;
         background-color: rgba(255,255,255,.7);
         width: 400px;
-        font-family: sans-serif;
+        font-family: 'Comfortaa', cursive;
 }
 
 </style>
 
-<style type="text/css">
-	@import url("//imperial.istic.net/static/steelfish/stylesheet.css");
-</style>
+<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 </head>
 <body>
 <div class="header">
 	<h1><a href="http://www.istic.net">
-	Istic.Networks
+	istic
 	</a></h1>
 	<span>Hosting ({{ hostname }})</span>
 </div>
