--- a/ansible/roles/millpond-b2-backup/templates/media-backup.bash.j2
+++ b/ansible/roles/millpond-b2-backup/templates/media-backup.bash.j2
@@ -6,4 +6,4 @@ if ! flock -n 9  ; then
  exit 1
 fi
 
-time b2 sync --delete --replaceNewer /var/lib/plexmediaserver/Media b2://millpond-media
+time b2 sync --delete --replaceNewer {{ plex_home }}/Media b2://millpond-media
