--- a/ansible/roles/water-gkhs-nginx/templates/letsencrypt.conf.j2
+++ b/ansible/roles/water-gkhs-nginx/templates/letsencrypt.conf.j2
@@ -1,5 +1,5 @@
 
-    ssl_certificate {{ letsencrypt_dir }}/fullchain.pem;
-    ssl_certificate_key {{ letsencrypt_dir }}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/{{ cert_id }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ cert_id }}/privkey.pem;
     ssl_session_cache    shared:SSL:1m;
     ssl_session_timeout  10m;
