Add image attribution

--- a/ansible/roles/water-gkhs-web-errors/templates/errors/410.html
+++ b/ansible/roles/water-gkhs-web-errors/templates/errors/410.html
@@ -53,6 +53,17 @@ body {
         font-family: 'Comfortaa', cursive;
 }
 
+#attrib {
+        position: absolute;
+        bottom: 5px;
+        left: 5px;
+        background: rgba(0,0,0,.5);
+        color: #EEE;
+        border-radius: 20px;
+        padding: 1em;
+        font-size: smaller;
+}
+
 </style>
 
 <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
@@ -85,7 +96,7 @@ I got a slug?
 
 </div>
 
-<p id="#attrib">Photo by Eric Muhr on Unsplash</p>
+<p id="attrib">Photo by Eric Muhr on Unsplash</p>
 </body>
 </html>
 
