Fix 410 errors on nginx

--- a/ansible/roles/water-gkhs-web-errors/templates/errors/410.html
+++ b/ansible/roles/water-gkhs-web-errors/templates/errors/410.html
@@ -79,19 +79,9 @@ body {
 <h1>410 Gone</h1>
 
 <p style="white-space: pre-line">
-This is a dead resource,
-Bereft of content it has ceased to be.
-It hasn't Moved, it's gone.
-Removed from the server.
-If you hadn't asked for it, the server wouldn't even know it existed,
-it's expired and gone to meet it's maker
-'E's kicked the bucket,
-'e's shuffled off 'is mortal coil, run down the curtain and joined the bleedin' choir invisibile.
-THIS IS AN EX-THING.
-
-*ahem*
-
-I got a slug?
+A thing that once was,
+That served its time and purpose,
+Now has ceased to be.
 </p>
 
 </div>
