Update Filebot version, sortitaaht to support new options

--- a/ansible/roles/water-gkhs-filebot/templates/media_logrotate.j2
+++ b/ansible/roles/water-gkhs-filebot/templates/media_logrotate.j2
@@ -6,3 +6,12 @@
     delaycompress
     missingok
 }
+
+{{ plex_home}}/.filebot/logs/*.log {
+    weekly
+    rotate 4
+    compress
+
+    delaycompress
+    missingok
+}
