The great {{ ansible-managed }}ening

--- a/roles/archipelago-exim/templates/exim.conf.j2
+++ b/roles/archipelago-exim/templates/exim.conf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 # MAKE A C-C-Change!
 MAIN_TLS_ENABLE = yes
 MAIN_TLS_CERTKEY = /etc/letsencrypt/live/{{ cert_id }}/fullchain.pem
