--- a/roles/archipelago-exim/templates/update-exim4.conf.conf.j2
+++ b/roles/archipelago-exim/templates/update-exim4.conf.conf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 # /etc/exim4/update-exim4.conf.conf
 #
 # Edit this file and /etc/mailname by hand and execute update-exim4.conf
