--- a/roles/water-gkhs-nginx/templates/letsencrypt.conf.j2
+++ b/roles/water-gkhs-nginx/templates/letsencrypt.conf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 
     ssl_certificate /etc/letsencrypt/live/{{ cert_id }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ cert_id }}/privkey.pem;
