--- a/roles/water-gkhs-filebot/templates/media_logrotate.j2
+++ b/roles/water-gkhs-filebot/templates/media_logrotate.j2
@@ -1,5 +1,5 @@
 # {{ ansible_managed }}
-{{ plex_home }}/Logs/*.log {
+{{ media_home }}/Logs/*.log {
     weekly
     rotate 4
     compress
@@ -8,7 +8,7 @@
     missingok
 }
 
-{{ plex_home }}/.filebot/logs/*.log {
+{{ media_home }}/.filebot/logs/*.log {
     weekly
     rotate 4
     compress
