🛠 Update web errors to work within apache better

--- a/roles/water-gkhs-web-errors/templates/errors/404.html
+++ b/roles/water-gkhs-web-errors/templates/errors/404.html
@@ -5,10 +5,17 @@
 
 <style type="text/css">
 
+html {
+  height: 100%;
+}
 body {
+  min-height: 100%;
 	margin: 0;
 	font-family: 'Comfortaa', cursive;
+	background: url("//art.istic.net/archipelago-errors/lost.jpg") no-repeat center center;
+	background-size: cover;
 }
+
 .header {
 	background-color: #000;
 	color: #FFF;
@@ -34,12 +41,6 @@ body {
 
 .header span {
 	letter-spacing: 0.1em;
-}
-
-
-body {
-        background: url("//art.istic.net/archipelago-errors/lost.jpg") no-repeat center center;
-        background-size: cover;
 }
 
 #explain {
@@ -72,4 +73,3 @@ body {
 
 </body>
 </html>
-
