--- a/roles/water-gkhs-web-errors/templates/errors/404_empire.html
+++ b/roles/water-gkhs-web-errors/templates/errors/404_empire.html
@@ -5,9 +5,16 @@
 
 <style type="text/css">
 
+
+html {
+  height: 100%;
+}
 body {
+  min-height: 100%;
 	margin: 0;
 	font-family: 'Comfortaa', cursive;
+	background: url("//art.istic.net/archipelago-errors/empire_down.jpg") no-repeat center center;
+	background-size: cover;
 }
 .header {
 	background-color: #000;
@@ -34,12 +41,6 @@ body {
 
 .header span {
 	letter-spacing: 0.1em;
-}
-
-
-body {
-        background: url("//art.istic.net/archipelago-errors/empire_down.jpg") no-repeat center center;
-        background-size: cover;
 }
 
 #explain {
@@ -73,4 +74,3 @@ body {
 
 </body>
 </html>
-
