--- a/roles/water-gkhs-web-errors/templates/errors/410.html
+++ b/roles/water-gkhs-web-errors/templates/errors/410.html
@@ -5,9 +5,15 @@
 
 <style type="text/css">
 
+html {
+  height: 100%;
+}
 body {
+  min-height: 100%;
 	margin: 0;
 	font-family: 'Comfortaa', cursive;
+	background: url("//art.istic.net/archipelago-errors/gone.jpg") no-repeat center center;
+	background-size: cover;
 }
 .header {
 	background-color: #000;
@@ -34,12 +40,6 @@ body {
 
 .header span {
 	letter-spacing: 0.1em;
-}
-
-
-body {
-        background: url("//art.istic.net/archipelago-errors/gone.jpg") no-repeat center center;
-        background-size: cover;
 }
 
 #explain {
@@ -89,4 +89,3 @@ Now has ceased to be.
 <p id="attrib">Photo by Eric Muhr on Unsplash</p>
 </body>
 </html>
-
