--- a/roles/water-gkhs-web-errors/templates/errors/404_host.html
+++ b/roles/water-gkhs-web-errors/templates/errors/404_host.html
@@ -5,9 +5,15 @@
 
 <style type="text/css">
 
+html {
+  height: 100%;
+}
 body {
+  min-height: 100%;
 	margin: 0;
 	font-family: 'Comfortaa', cursive;
+	background: url("//art.istic.net/archipelago-errors/city.jpeg") no-repeat center center;
+	background-size: cover;
 }
 .header {
 	background-color: #000;
@@ -35,13 +41,6 @@ body {
 .header span {
 	letter-spacing: 0.1em;
 }
-
-
-body {
-        background: url("//art.istic.net/archipelago-errors/city.jpeg") no-repeat center center;
-        background-size: cover;
-}
-
 #explain {
         border-radius: 20px;
         padding: 1em;
@@ -74,4 +73,3 @@ body {
 
 </body>
 </html>
-
