--- a/roles/water-gkhs-web-errors/templates/errors/502_empire.html
+++ b/roles/water-gkhs-web-errors/templates/errors/502_empire.html
@@ -5,9 +5,15 @@
 
 <style type="text/css">
 
+html {
+  height: 100%;
+}
 body {
+  min-height: 100%;
 	margin: 0;
 	font-family: 'Comfortaa', cursive;
+	background: url("//art.istic.net/archipelago-errors/empire_down.jpg") no-repeat center center;
+	background-size: cover;
 }
 .header {
 	background-color: #000;
@@ -36,11 +42,6 @@ body {
 	letter-spacing: 0.1em;
 }
 
-
-body {
-        background: url("//art.istic.net/archipelago-errors/empire_down.jpg") no-repeat center center;
-        background-size: cover;
-}
 
 #explain {
         border-radius: 20px;
@@ -73,4 +74,3 @@ body {
 
 </body>
 </html>
-
