Remove references to Archi

--- a/roles/water-gkhs-web-errors/templates/errors/502_empire.html
+++ b/roles/water-gkhs-web-errors/templates/errors/502_empire.html
@@ -63,7 +63,7 @@ body {
 	<h1><a href="http://www.istic.net">
 	istic
 	</a></h1>
-	<span>Hosting (archipelago.water.gkhs.net)</span>
+	<span>Hosting (firth.water.gkhs.net)</span>
 </div>
 <div id="explain">
 <h1>PD Forums down</h1>
