Refactor nginx config
- Move common ngnix config to water-gkhs
- Create atoll's own config directory
- Add hosting for Delta

--- a/roles/water-gkhs-exim/templates/update-exim4.conf.conf.j2
+++ b/roles/water-gkhs-exim/templates/update-exim4.conf.conf.j2
@@ -23,7 +23,7 @@ dc_local_interfaces='127.0.0.1'
 dc_readhost=''
 dc_relay_domains=''
 dc_minimaldns='false'
-dc_relay_nets='{{ cenote_ip }} {{ archipelago_ip }} {{ firth_ip }}'
+dc_relay_nets='{{ cenote_ip }} {{ atoll_ip }} {{ firth_ip }}'
 dc_smarthost=''
 CFILEMODE='644'
 dc_use_split_config='true'
