Refactor to support redis auth by default

--- a/roles/stream-delta/templates/production.env.j2
+++ b/roles/stream-delta/templates/production.env.j2
@@ -31,7 +31,7 @@ DB_DATABASE={{ stream_delta_db_name }}
 DB_USERNAME={{ stream_delta_db_user }}
 DB_PASSWORD={{ stream_delta_db_password }}
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -48,7 +48,7 @@ MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=localhost
-REDIS_PASSWORD=null
+REDIS_PASSWORD={{ stream_delta_redis_password }}
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
