🛠 Streamdelta config updates

--- a/roles/stream-delta/templates/production.env.j2
+++ b/roles/stream-delta/templates/production.env.j2
@@ -25,7 +25,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST{{ stream_delta_db_host }}
+DB_HOST={{ stream_delta_db_host }}
 DB_PORT={{ stream_delta_db_port }}
 DB_DATABASE={{ stream_delta_db_name }}
 DB_USERNAME={{ stream_delta_db_user }}
@@ -48,6 +48,7 @@ MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=localhost
+REDIS_USERNAME={{ stream_delta_redis_username }}
 REDIS_PASSWORD={{ stream_delta_redis_password }}
 REDIS_PORT=6379
 
@@ -98,8 +99,13 @@ TWITCH_CLIENT_ID={{ stream_delta_twitch_client_id }}
 TWITCH_CLIENT_SECRET={{ stream_delta_twitch_client_secret }}
 TWITCH_WEBHOOK_SECRET=$WEBHOOK_CLIENT_SECRET
 
+TWITCH_BROADCASTER_ID=31245883
+TWITCH_BROADCASTER_NAME=aquarionics
 
 
 IGDB_WEBHOOK_SECRET=$WEBHOOK_CLIENT_SECRET
 
 TWITCH_HELIX_REDIRECT_URI={$APP_URL}/twitch/callback
+
+OCTANE_SERVER=frankenphp
+OCTANE_HTTPS=true
