--- a/roles/b2-backup/templates/media-backup.bash.j2
+++ b/roles/b2-backup/templates/media-backup.bash.j2
@@ -2,9 +2,9 @@
 
 # {{ ansible_managed }}
 exec 9>/var/lock/media-backup
-if ! flock -n 9  ; then
- echo "B2 media backup is still running";
- exit 1
+if ! flock -n 9; then
+	echo "B2 media backup is still running"
+	exit 1
 fi
 
 export PATH=$PATH:/usr/local/bin
