--- a/roles/getmail/templates/mail_backup.sh.j2
+++ b/roles/getmail/templates/mail_backup.sh.j2
@@ -6,10 +6,10 @@ LOCKDIR=/tmp
 # Locking code based on code from http://troy.jdmz.net/cron/
 
 # Originally by Troy Johnson,
-# Adapted by Nicholas Avenell <nicholas@aquarionics.com> 
+# Adapted by Nicholas Avenell <nicholas@aquarionics.com>
 
 # lock file creation and removal
-LOCKFILE=$LOCKDIR/`basename $0`.lock
+LOCKFILE=$LOCKDIR/$(basename $0).lock
 [ -f $LOCKFILE ] && echo $LOCKFILE exists && exit 0
 trap "{ rm -f $LOCKFILE; exit 255; }" 2
 trap "{ rm -f $LOCKFILE; exit 255; }" 9
