Add VITE_FONT_FAMILY configuration to production.env.j2

--- a/roles/stream-delta/templates/production.env.j2
+++ b/roles/stream-delta/templates/production.env.j2
@@ -100,6 +100,8 @@ TWITCH_WEBHOOK_SECRET=$WEBHOOK_CLIENT_SECRET
 TWITCH_BROADCASTER_ID=31245883
 TWITCH_BROADCASTER_NAME=aquarionics
 
+VITE_FONT_FAMILY="Syne Mono"
+
 IGDB_WEBHOOK_SECRET=$WEBHOOK_CLIENT_SECRET
 
 TWITCH_HELIX_REDIRECT_URI={${APP_URL}/twitch/callback
