--- a/roles/firth-sftp-docker/templates/bind_mounts.sh.j2
+++ b/roles/firth-sftp-docker/templates/bind_mounts.sh.j2
@@ -13,9 +13,9 @@ function bindmount() {
 # chown -R :users /data/common
 
 {% for user in sftp_users %}
-    {% if user.bind_mounts is defined %}
-        {% for mount in user.bind_mounts %}
-            bindmount {{ mount.source }} /home/{{ user.name }}/{{ mount.target }} {% if mount.read_only %}--read-only{% endif %}
-        {% endfor %}
-    {% endif %}
+{% if user.bind_mounts is defined %}
+{% for mount in user.bind_mounts %}
+#bindmount {{ mount.source }} /home/{{ user.name }}/{{ mount.target }} {% if mount.read_only is defined and mount.read_only %}--read-only{% endif %}
+{% endfor %}
+{% endif %}
 {% endfor %}
