Fix filename in bind_mounts.sh.j2 comment to match actual mounted file

--- a/roles/firth-sftp-docker/templates/bind_mounts.sh.j2
+++ b/roles/firth-sftp-docker/templates/bind_mounts.sh.j2
@@ -1,5 +1,5 @@
 #!/bin/bash
-# File mounted as: /etc/sftp.d/bindmount.sh
+# File mounted as: /etc/sftp.d/bind_mounts.sh
 # Just an example (make your own)
 
 function bindmount() {
