Update SFTP Docker templates

--- a/roles/firth-sftp-docker/templates/bind_mounts.sh.j2
+++ b/roles/firth-sftp-docker/templates/bind_mounts.sh.j2
@@ -1,6 +1,6 @@
 #!/bin/bash
 # File mounted as: /etc/sftp.d/bind_mounts.sh
-# Just an example (make your own)
+# {{ ansible_managed }}
 
 function bindmount() {
 	if [ -d "$1" ]; then
