--- a/roles/firth-sftp-docker/templates/users.conf.j2
+++ b/roles/firth-sftp-docker/templates/users.conf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 {% for user in sftp_users %}
 {{ user.name }}:{{ user.password }}:e:{{ user.userid }}:{{ user.groupid }}
 {% endfor %}
