--- a/roles/firth_sftp_docker/templates/bind_mounts.sh.j2
+++ b/roles/firth_sftp_docker/templates/bind_mounts.sh.j2
@@ -12,7 +12,7 @@ function bindmount() {
 # Remember permissions, you may have to fix them:
 # chown -R :users /data/common
 
-{% for user in sftp_users %}
+{% for user in firth_sftp_docker_users %}
 {% if user.bind_mounts is defined %}
 {% for mount in user.bind_mounts %}
 #bindmount {{ mount.source }} /home/{{ user.name }}/{{ mount.target }} {% if mount.read_only is defined and mount.read_only %}--read-only{% endif %}
